contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/storage/fail/non_enum_input.stderr
error: custom attribute panicked
 --> tests/ui/storage/fail/non_enum_input.rs:7:1
  |
7 | #[common_macros::storage]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse enum: expected `enum`
